--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
-    "example": "ts-node examples/fourTradingExample.ts"
+    "example": "ts-node examples/fourTradingExample.ts",
+    "test:install": "node test-install.js"
   },
   "keywords": [
     "bsc",
