--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
     "example": "ts-node examples/fourTradingExample.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:install": "node test-install.js"
   },
   "keywords": [
@@ -32,8 +35,11 @@
     "ethers": "^6.13.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.0",
     "dotenv": "^17.2.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.0"
   },
